--- a/configuration/root_directory.h.in
+++ b/configuration/root_directory.h.in
@@ -1,1 +1,3 @@
-const char *logl_root = "${CMAKE_BINARY_DIR}";
+// Path relative to the executable (assumes executable is in the `build/` dir)
+// Use an environment variable `LOGL_ROOT_PATH` to override at runtime if needed.
+const char *logl_root = "..";
